# fastedit

./: .gitignore  CHANGELOG.md  CLAUDE.md  MODEL_CARD.md  README.md  pyproject.toml
claude-skill/: SKILL.md
configs/: languages.yaml
docs/: index.html  testing-matrix.md
specs/: django_note_api.yaml
src/fastedit/: __init__.py  __main__.py  cli.py  doctor.py  hook.py  mcp_install.py  mcp_server.py  model_download.py  update_check.py
src/fastedit/data_gen/: ast_analyzer.py  generate.py  prompt_templates.py
src/fastedit/eval/: benchmark.py
src/fastedit/inference/: ast_utils.py  cache_utils.py  caller_safety.py  chunk_locator.py  chunked_merge.py  indent.py  llm_engine.py  merge.py  mlx_engine.py  move_to_file.py  prefix_cache.py  rename.py  snippet_analysis.py  symbols.py  text_match.py  vllm_engine.py
src/fastedit/mcp/: __init__.py  backup.py  server.py  tools_ast.py  tools_edit.py  tools_read.py
tests/: test_add_guard_marker_position.py  test_ast_analyzer.py  test_chained_edits_stale_ast.py  test_class_method_partial_replace.py  test_cli.py  test_cross_file_rename.py  test_deterministic_benchmark.py  test_deterministic_production.py  test_deterministic_vs_model.py  test_direct_swap.py  test_fast_delete_safety.py  test_fast_edit_impact.py  test_fast_move_to_file.py  test_fast_rename_ast.py  test_guard_fields_vs_methods.py  test_hardening_adversarial.py  test_hardening_cross_language.py  test_hardening_properties_integration.py  test_hook.py  test_indent.py  test_marker_v024.py  test_mlx_engine.py  test_multiline_signature_preserve.py  test_preserve_siblings.py  test_rename.py  test_replace_guard.py  test_replace_without_signature.py  test_snippet_analysis.py  test_symbols.py  test_text_match.py
(+2 files in other folders)
